Add style to success notification

--- a/phonebook/src/index.scss
+++ b/phonebook/src/index.scss
@@ -10,7 +10,11 @@ li {
 }
 
 .success {
-  color: black;
-  background: green;
+  color: green;
+  background: lightgrey;
+  font-size: 20px;
+  border-style: solid;
   border-radius: 5px;
+  padding: 10px;
+  margin-bottom: 10px;
 }
